# Simple-Rust-Based-Serverless-Function

./: Cargo.toml  README.md
src/: main.rs
